fix: hide overflow in containers

--- a/src/index.css
+++ b/src/index.css
@@ -204,6 +204,7 @@ section>h2 {
   max-width: 57rem;
   margin: auto;
   padding: 2rem;
+  overflow: hidden;
 }
 
 
